# llm-rag-ds-optimizer

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.hypothesis/constants/: 0556f5f57909739b  0cb69a56f510d703  0cf0b48dd8ad9cd1  10b7bf7a3132d080  1f82cb78ee103f1b  6903fa6933513fdd  9dfdce7d4e92e69a  b6fa4e67790c4c2c  b81266db0ea0dada  b8b86c535899e332  c10787f87af43dfe  ce40a7244cc77a0c  dd74dc8d642a581c  f48d52c7e7af565d
benchmarks/: __init__.py  bench_end2end.py  bench_hnsw.py  bench_inverted_index.py  bench_kv_cache.py  bench_scheduler.py
benchmarks/results/: benchmark_results.csv  (+9 more)
data/: README.md
docs/: CITATIONS.md  api.md  architecture.md  mathematical_models.md  paper.md  usage.md
llmds/: __init__.py  admissions.py  chunking.py  cmsketch.py  hnsw.py  indexed_heap.py  inverted_index.py  kv_cache.py  paged_allocator.py  retrieval_pipeline.py  scheduler.py  token_lru.py  tokenizer.py  utils.py
scripts/: __init__.py  analyze_variance.py  build_indices.py  download_corpus.py  env_hash.py  generate_architecture_diagram.py  generate_synthetic_data.py  make_report.py  make_slides.py  plot_corpus_results.py  plot_results.py  prepare_embeddings.py  profile_tail_latency.py  run_benchmarks.py  run_multi_dataset_benchmarks.py  security_scan.py
tests/: test_admissions.py  test_cmsketch.py  test_hnsw.py  test_indexed_heap.py  test_integration.py  test_inverted_index.py  test_kv_cache.py  test_paged_allocator.py  test_pipeline.py  test_property.py  test_scheduler.py  test_token_lru.py
(+188 files in other folders)
