[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-rag-ds-optimizer"
version = "0.1.0"
description = "Production-grade LLM optimizer for throughput, latency, and memory optimization"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "llmds"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
mmh3 = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.92.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
python-docx = "^1.1.0"
matplotlib = "^3.8.0"
pandas = "^2.1.0"
python-pptx = "^0.6.21"
datasets = {version = "^2.16.0", optional = true}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

